# ApplAI_Dev

./: .replit  Pasted-Objective-Develop-a-streamlined-version-of-Appl-AI-focused-on-core-functionalities-that-enable-user-1726756102062.txt  README.md  ai_generator.py  app.py  application_tracker.py  auth.py  config.py  payment.py  pyproject.toml  replit.nix  resume_parser.py
extension/: background.js  content.js  manifest.json  popup.html
static/: style.css
templates/: index.html
